# Pixogol

./: .env.example  .replit  README.md  app.py  pyproject.toml  replit.md  test_image.py
logs/: analysis_1a17f067_20250808_030318.json  analysis_1ada3409_20250810_182518.json  analysis_280e85d1_20250808_022007.json  analysis_3b72524f_20250810_183353.json  analysis_474b749d_20250810_184144.json  analysis_4eeb7fb6_20250808_024414.json  analysis_64017036_20250729_025428.json  analysis_6b3e8bdd_20250808_021256.json  analysis_73029b71_20250808_022420.json  analysis_afee0cb5_20250808_023010.json  analysis_e9614df4_20250808_021009.json  pixogol_analysis_20250729.jsonl  pixogol_analysis_20250808.jsonl  pixogol_analysis_20250810.jsonl
utils/: logger.py  ocr_processor.py  risk_analyzer.py
