[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.97.1",
    "opencv-python>=4.12.0.88",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
    "tesseract>=0.1.3",
]
